<resources>
    <string name="app_name">Work Ok</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="action_sign_in_short">Ingresar</string>
    <string name="error_invalid_email">Email no Válido</string>
    <string name="error_connection">Error en Conexión</string>
    <string name="error_invalid_password">Contraseña muy Corta</string>
    <string name="error_incorrect_password">Contraseña o nombre de usuario inválido</string>
    <string name="error_field_required">Campo Requerido</string>
    <string name="error_password_not_match">La Contraseña no coincide</string>
    <string name="error_username_short">Nombre de Usuario muy corto</string>
    <string name="error_accept_tos">Debe Aceptar los Términos y Condiciones</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_sign_up">Sign Up</string>
    <string name="name">Nombre</string>
    <string name="fullname">Nombre y Apellido</string>
    <string name="pass_confirm">Confirmar Contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="acept_terms">Acepto Terminos y Condciones</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_test">test</string>
    <string name="title_activity_sign_in">Registro</string>
    <string name="title_activity_main">Mis Proyectos</string>
    <string name="title_new_task">Nueva Tarea</string>
    <string name="title_add_user">Agregar Usuario</string>
    <string name="title_project_details">Detalle de Proyecto</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="projectName">Nombre de Proyecto</string>
    <string name="description">Descripción</string>
    <string name="date_start">Fecha de Inicio</string>
    <string name="date_end">Fecha de Fin</string>
    <string name="create_project">Crear Proyecto</string>
    <string name="add_user">Agregar Persona a Tarea</string>
    <string name="select_add_user">Seleccione las Personas a Agregar</string>
    <string name="add_user_title">Seleccione los usuarios que desea agregar al proyecto</string>
    <string name="add">Agregar</string>
    <string name="cancel">Cancelar</string>
    <string name="ok">Aceptar</string>
    <string name="task_name">Nombre de Tarea</string>
    <string name="notes">Observaciones</string>
    <string name="user_assigned">Usuario Asignado</string>
    <string name="in_progress">En Progreso</string>
    <string name="rejected">Rechazada</string>
    <string name="done">Realizada</string>
    <string name="status">Estado</string>
    <string name="update_status">Cambiar Estado</string>
    <string name="create_task">Crear Tarea</string>
    <string name="percentage_progress">Porcentaje de Avance</string>
    <string name="message_new_project">Presione el símbolo de + para crear un nuevo proyecto</string>
    <string name="title_activity_new_project">Nuevo Proyecto</string>
    <string name="exit">Salir</string>
    <string name="export">Exportar</string>
    <string name="historial">Historial</string>
    <string name="graph_gantt">Graficar Gantter</string>
    <string name="message_no_task">No tiene ninguna Tarea asociada</string>
    <string name="no_user_assigned">No posee usuarios Asignados, Click aqui para asignar</string>
    <string name="message_new_task">Presione el símbolo + para crear nuevas tareas</string>
    <string name="message_no_users">Ingrese Usuarios a sus proyecto</string>
    <string name="error_sign_up">Error al registrar el usuario</string>
    <string name="no_messages">Usted no tiene nuevas notificaciones</string>
    <string name="notifications">Notificaciones</string>
    <string name="my_tasks">Mis Tareas</string>
    <string name="search">Buscar</string>
    <string name="hint_search">Búscar Tarea</string>
    <string name="delete">Eliminar</string>
    <string name="delete_project">Eliminar Proyecto</string>
    <string name="finish_project">Finalizar Proyecto</string>


</resources>
