<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/history_option"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/historial"
        app:showAsAction="collapseActionView"/>
    <item android:id="@+id/end_project"
        android:title="@string/finish_project"
        android:icon="@drawable/ic_check_36"
        app:showAsAction="collapseActionView"/>
    <item android:id="@+id/search"
        android:title="@string/hint_search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />




</menu>