<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".activity.NewProjectActivity"
    android:weightSum="1"
    android:orientation="vertical"
    android:id="@+id/container">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:id="@+id/imageView4"
        android:src="@drawable/logo"
        android:layout_gravity="center" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/scrollView2" >

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/projectName"
                android:layout_marginTop="5dp"
                android:inputType="text"
                android:hint="@string/projectName" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:ems="10"
                android:id="@+id/description"
                android:lines="3"
                android:hint="@string/description" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:id="@+id/startDate"
                    android:hint="@string/date_start"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:editable="false"
                    android:clickable="true"
                    android:contextClickable="false"
                    android:focusableInTouchMode="false" />

                <EditText
                    android:layout_width="165dp"
                    android:layout_height="wrap_content"
                    android:inputType="date"
                    android:ems="10"
                    android:id="@+id/endDate"
                    android:hint="@string/date_end"
                    android:textSize="15sp"
                    android:textAlignment="center"
                    android:layout_marginTop="10dp"
                    android:onClick="showDatePickerDialog"
                    android:focusableInTouchMode="false"
                    android:layout_weight="1" />

            </LinearLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/create_project"
                android:id="@+id/create_project"
                android:background="#000000"
                android:textColor="#ffffff"
                android:layout_marginTop="50dp"
                android:layout_weight="200" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>
